--- a/index.html
+++ b/index.html
@@ -98,16 +98,27 @@
     </div>
 
     <!-- Footer Section -->
+
     <div  class="footer">
       <div clas="footer-row">
-        <div class="footer-col">
-          Email, github ,leetcode, linked In
+        <div class="footer-col footer-left">
+          <ul class="ul-remove-bullet">
+            <li class="footer-item-left">Email</li>
+            <li class="footer-item-left">github</li>
+            <li class="footer-item-left">leetcode</li>
+            <li class="footer-item-left">linked In</li>
+          </ul>
         </div>
-        <div class="footer-col">
-          signature and a statement
+        <div class="footer-col footer-mid">
+          <ul class="ul-remove-bullet">
+            <li class="footer-item-centre">signature</li>
+            <li class="footer-item-centre">statement</li>
+          </ul>
         </div>
-        <div class="footer-col">
-          city, 
+        <div class="footer-col footer-right">
+          <ul class="ul-remove-bullet">
+            <li class="footer-item-right">city</li>
+          </ul> 
         </div>
       </div>
 
