--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
     <nav id="navbar">
       <ul>
-        <li class="nav-item logo">logo</li>
-        <li class="nav-item">Home</li>
-        <li class="nav-item">Projects</li>
-        <li class="nav-item">Something special</li>
-        <li class="nav-item">Contact</li>
-        <li class="nav-item">About</li>
+        <li class="nav-item logo"><a href="index.html">logo</a></li>
+        <li class="nav-item"><a href="index.html">Home</a></li>
+        <li class="nav-item"><a href="#projects">Projects</a></li>
+        <li class="nav-item"><a href="#projects">Something Special</a></li>
+        <li class="nav-item" ><a href="#footer">Contact</a></li>
+        <li class="nav-item"><a href="">About</a></li>
       </ul>
     </nav>
 
@@ -62,7 +62,7 @@
           </p>
           <div>
 
-            <img class="inferno" src="images/square.jpg">
+            <img class="inferno" src="images/shivam_1.jpg">
           </div>
         </div>
       </div>
@@ -70,7 +70,7 @@
 
     <!-- Project section -->
 
-    <div class="projects">
+    <div id="projects">
       <div class="project-row">
         <div class="project-col">
 
@@ -99,7 +99,8 @@
 
     <!-- Footer Section -->
 
-    <div  class="footer">
+    <section id="footer">
+
       <div clas="footer-row">
         <div class="footer-col footer-left">
           <ul class="ul-remove-bullet">
@@ -117,12 +118,15 @@
         </div>
         <div class="footer-col footer-right">
           <ul class="ul-remove-bullet">
-            <li class="footer-item-right">city</li>
+            <li class="footer-item-right">youtube</li>
+            <li class="footer-item-right">spotify</li>
+            <li class="footer-item-right">apple</li>
+            <li class="footer-item-right">soundcloud</li>
           </ul> 
         </div>
       </div>
-
-    </div>
+    </section>
+      
 
     <!-- javascript file -->
     <script src="file.js"></script>
