--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </div>
     </section>
       
-
+    <div><h1>Shivam Salame</h1></div>
     <!-- javascript file -->
     <script src="file.js"></script>
   </body>
