--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Favicon -->
-
+&nbsp;
       <link rel="icon" sizes= 16*16 href="favicon/favicon.png"  >
     
     <!-- Meta tags -->
